tests/expectations/compiler/statements/multiple_returns_in_one_block_fail.out
DCE_ENABLED:
Error [ETYC0372025]: Cannot reach the following statement.
    --> compiler-test:5:9
     |
   5 |         let double: u32 = x + x;
     |         ^^^^^^^^^^^^^^^^^^^^^^^
     |
     = Remove the unreachable code.
Error [ETYC0372025]: Cannot reach the following statement.
    --> compiler-test:6:9
     |
   6 |         return double;
     |         ^^^^^^^^^^^^^^
     |
     = Remove the unreachable code.
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | program test.aleo {
     | ^^^^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372025]: Cannot reach the following statement.
    --> compiler-test:5:9
     |
   5 |         let double: u32 = x + x;
     |         ^^^^^^^^^^^^^^^^^^^^^^^
     |
     = Remove the unreachable code.
Error [ETYC0372025]: Cannot reach the following statement.
    --> compiler-test:6:9
     |
   6 |         return double;
     |         ^^^^^^^^^^^^^^
     |
     = Remove the unreachable code.
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | program test.aleo {
     | ^^^^^^^^^^^^
